feat(#97): add new structure of the overlay http server.

--- a/.golangci-lint.yml
+++ b/.golangci-lint.yml
@@ -103,6 +103,10 @@ issues:
         - wrapcheck
         - bodyclose
 
+    - path: /overlayhttp/
+      linters:
+        - wrapcheck 
+        
     - path: /core/
       linters:
         - wrapcheck
