refactor(#97): add docker compose with swagger, refine openapi yam files, add custom http error responses.

--- a/api/openapi/paths/non_admin/responses.yaml
+++ b/api/openapi/paths/non_admin/responses.yaml
@@ -33,10 +33,19 @@ components:
       additionalProperties:
         $ref: "#/components/schemas/AdmittanceInstructions"
 
-    SubmitTransactionResponse:
+    SubmitTransaction:
       type: object
       properties:
         STEAK:
           $ref: "#/components/schemas/STEAK"
       required:
         - STEAK
+
+  responses:
+    SubmitTransactionResponse:
+      description: |
+         Overlay engine successfully processed the submitted transaction octet-stream with the specified topic headers.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/SubmitTransaction'
