--- a/.golangci-lint.yml
+++ b/.golangci-lint.yml
@@ -103,7 +103,7 @@ issues:
         - wrapcheck
         - bodyclose
 
-    - path: /overlayhttp/
+    - path: /api/
       linters:
         - wrapcheck 
         
