refactor(#97): restore overlayhttp path name in the golint exclude rules, add missing func implementation to the noop_engine.

--- a/.golangci-lint.yml
+++ b/.golangci-lint.yml
@@ -103,7 +103,7 @@ issues:
         - wrapcheck
         - bodyclose
 
-    - path: /api/
+    - path: /overlayhttp/
       linters:
         - wrapcheck 
         
