--- a/api/openapi/server/api.yaml
+++ b/api/openapi/server/api.yaml
@@ -27,6 +27,63 @@ paths:
           $ref: '../paths/admin/responses.yaml#/components/responses/AdvertisementsSyncResponse'
         500:
           $ref: '../errors/responses.yaml#/components/responses/InternalServerErrorResponse'
+          
+  /api/v1/admin/startGASPSync:
+    post:
+      tags:
+        - admin
+      operationId: StartGASPSync
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          $ref: '../paths/admin/responses.yaml#/components/responses/StartGASPSyncResponse'
+        500:
+          $ref: '../errors/responses.yaml#/components/responses/InternalServerErrorResponse'
+
+  /api/v1/requestForeignGASPNode:
+    post:
+      tags:
+        - non-admin
+      operationId: RequestForeignGASPNode
+      parameters:
+        - in: header
+          name: X-BSV-Topic
+          schema:
+            type: string
+          required: true
+          description: BSV topic for the GASP node
+      requestBody:
+        $ref: '../paths/non_admin/request-bodies.yaml#/components/requestBodies/RequestForeignGASPNodeBody'
+      responses:
+        200:
+          $ref: '../paths/non_admin/responses.yaml#/components/responses/RequestForeignGASPNodeResponse'
+        400:
+          $ref: '../errors/responses.yaml#/components/responses/BadRequestResponse'
+        500:
+          $ref: '../errors/responses.yaml#/components/responses/InternalServerErrorResponse'
+
+  /api/v1/requestSyncResponse:
+    post:
+      tags:
+        - non-admin
+      operationId: RequestSyncResponse
+      parameters:
+        - in: header
+          name: X-BSV-Topic
+          schema:
+            type: string
+          required: true
+          description: BSV topic for sync response
+      requestBody:
+        $ref: '../paths/non_admin/request-bodies.yaml#/components/requestBodies/RequestSyncResponseBody'
+      responses:
+        200:
+          $ref: '../paths/non_admin/responses.yaml#/components/responses/RequestSyncResponseResponse'
+        400:
+          $ref: '../errors/responses.yaml#/components/responses/BadRequestResponse'
+        500:
+          $ref: '../errors/responses.yaml#/components/responses/InternalServerErrorResponse'
 
   /api/v1/submit:
     post:
